--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -76,8 +76,8 @@
                 <ul class="items_list">
                     <li>
                         <a href="https://gameball.co" target="_blank">
-                            <div class="item_card flex gap-5">
-                                <div class="w-1/4">
+                            <div class="item_card flex-wrap flex gap-5 lg:flex-nowrap">
+                                <div class="lg:w-1/4">
                                     <p class="tracking-widest text-xs mt-1"> {{'2020 - Present' | uppercase}}</p>
                                 </div>
                                 <div class="w-3/4">
@@ -94,8 +94,8 @@
                         </a>
                     </li>
                     <li>
-                        <div class="item_card flex gap-5">
-                            <div class="w-1/4">
+                        <div class="item_card flex-wrap flex gap-5 lg:flex-nowrap">
+                            <div class="lg:w-1/4">
                                 <p class="tracking-widest text-xs mt-1"> {{'2019 - 2020' | uppercase}}</p>
                             </div>
                             <div class="w-3/4">
@@ -117,12 +117,12 @@
                     <ul class="items_list">
                         <li>
                             <a href="https://gameball.co" target="_blank">
-                                <div class="item_card flex gap-5">
+                                <div class="item_card flex-wrap flex gap-5 lg:flex-nowrap">
                                     <div>
                                         <img class="rounded-md" ngSrc="assets/img/gameball.webp" width="200"
                                             height="200" alt="">
                                     </div>
-                                    <div class="w-2/3">
+                                    <div class="lg:w-2/3">
                                         <h3 class="mb-2 project_title">Gameball Automation</h3>
                                         <p>A workflow builder app for Gameball (marketing & customer retention SaaS).
                                             Contact for demo.</p>
@@ -132,7 +132,7 @@
                         </li>
                         <li>
                             <a href="https://harmoniks.co" target="_blank">
-                                <div class="item_card flex gap-5">
+                                <div class="item_card flex-wrap flex gap-5 lg:flex-nowrap">
                                     <div>
                                         <img class="rounded-md" ngSrc="assets/img/harmoniks.webp" width="200"
                                             height="200" alt="">
@@ -148,7 +148,7 @@
                         </li>
                         <li>
                             <a href="https://www.meek.ventures/" target="_blank">
-                                <div class="item_card flex gap-5">
+                                <div class="item_card flex-wrap flex gap-5 lg:flex-nowrap">
                                     <div>
                                         <img class="rounded-md" ngSrc="assets/img/meek.webp" width="200" height="200"
                                             alt="">
@@ -165,7 +165,7 @@
                         </li>
                         <li>
                             <a href="https://costnip.com/" target="_blank">
-                                <div class="item_card flex gap-5">
+                                <div class="item_card flex-wrap flex gap-5 lg:flex-nowrap">
                                     <div>
                                         <img class="rounded-md" ngSrc="assets/img/costnip.webp" width="200" height="200"
                                             alt="">
@@ -180,7 +180,7 @@
                         </li>
                         <li>
                             <a href="https://tattooswizard.com/" target="_blank">
-                                <div class="item_card flex gap-5">
+                                <div class="item_card flex-wrap flex gap-5 lg:flex-nowrap">
                                     <div>
                                         <img class="rounded-md" ngSrc="assets/img/tattooswizard.webp" width="200"
                                             height="200" alt="">
@@ -201,8 +201,8 @@
                 <p class="tracking-widest mb-4">{{'testimonials' | uppercase}}</p>
                 <ul class="items_list">
                     <li>
-                        <div class="item_card flex gap-5">
-                            <div class="w-1/4">
+                        <div class="item_card flex-col flex gap-5 lg:flex-row lg:flex-nowrap">
+                            <div class="lg:w-1/4">
                                 <p class="tracking-widest text-xs mt-1"> {{'Alex Varmuza' | uppercase}}</p>
                             </div>
                             <div class="w-3/4">
@@ -219,14 +219,14 @@
                         </div>
                     </li>
                     <li>
-                        <div class="item_card flex gap-5">
-                            <div class="w-1/4">
+                        <div class="item_card flex-col flex gap-5 lg:flex-row lg:flex-nowrap">
+                            <div class="lg:w-1/4">
                                 <p class="tracking-widest text-xs mt-1"> {{'Diogo' | uppercase}}</p>
                             </div>
                             <div class="w-3/4">
                                 <h3 class="project_title">Costnip</h3>
                                 <p class="mb-4">CEO</p>
-                                <p>Great job and very patient!</p>
+                                <p class="italic">Great job and very patient!</p>
                             </div>
                         </div>
                     </li>
