--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -89,6 +89,16 @@
                                         serve company's growth
                                         strategy. Provide leadership within engineering team through close
                                         collaboration, knowledge sharing and mentorship.</p>
+                                    <div class="badges mt-4">
+                                        <ul class="flex flex-wrap gap-2">
+                                            <li>Angular</li>
+                                            <li>TypeScript</li>
+                                            <li>JavaScript</li>
+                                            <li>NodeJS</li>
+                                            <li>SASS</li>
+                                            <li>Cypress</li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                         </a>
@@ -105,6 +115,15 @@
                                     certain
                                     daily tasks and managing people &
                                     culture.</p>
+                                <div class="badges mt-4">
+                                    <ul class="flex flex-wrap gap-2">
+                                        <li>React</li>
+                                        <li>NodeJS</li>
+                                        <li>MongoDB</li>
+                                        <li>Express</li>
+                                        <li>Heroku</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </li>
@@ -126,6 +145,14 @@
                                         <h3 class="mb-2 project_title">Gameball Automation</h3>
                                         <p>A workflow builder app for Gameball (marketing & customer retention SaaS).
                                             Contact for demo.</p>
+                                        <div class="badges mt-4">
+                                            <ul class="flex flex-wrap gap-2">
+                                                <li>Angular</li>
+                                                <li>JavaScript</li>
+                                                <li>SASS</li>
+                                                <li>Cypress</li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
                             </a>
@@ -142,6 +169,12 @@
                                         <p> Company profile for a theme studio that showcases their products, provide
                                             support to their clients
                                         </p>
+                                        <div class="badges mt-4">
+                                            <ul class="flex flex-wrap gap-2">
+                                                <li>Next.js</li>
+                                                <li>TypeScript</li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
                             </a>
@@ -159,6 +192,12 @@
                                             & building new features for an
                                             all-in-one business/educational social platform web app.
                                         </p>
+                                        <div class="badges mt-4">
+                                            <ul class="flex flex-wrap gap-2">
+                                                <li>Angular</li>
+                                                <li>TypeScript</li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
                             </a>
@@ -174,6 +213,12 @@
                                         <h3 class="mb-2 project_title">Costnip</h3>
                                         <p> Perfomance optimization & UI/UX enhancements.
                                         </p>
+                                        <div class="badges mt-4">
+                                            <ul class="flex flex-wrap gap-2">
+                                                <li>Angular</li>
+                                                <li>TypeScript</li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
                             </a>
@@ -189,6 +234,12 @@
                                         <h3 class="mb-2 project_title">Tattoos Wizard</h3>
                                         <p> Perfomance optimization & UI/UX enhancements.
                                         </p>
+                                        <div class="badges mt-4">
+                                            <ul class="flex flex-wrap gap-2">
+                                                <li>Angular</li>
+                                                <li>TypeScript</li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
                             </a>
