--- a/src/app/pages/landing/landing.component.scss
+++ b/src/app/pages/landing/landing.component.scss
@@ -78,3 +78,14 @@
         }
     }
 }
+
+.badges {
+    li {
+        background-color: #adef9d1d;
+        color: #aeef9d;
+        border-radius: 12px;
+        padding: 4px 6px;
+        margin: 0;
+        font-size: 12px;
+    }
+}
